connection to postgres, data load frame,data visiualization done

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -89,37 +89,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns of apollo_reviews DataFrame: Index(['reviewId', 'userName', 'userImage', '👍', 'reviewCreatedVersion', 'at',\n",
+      "Index(['reviewId', 'userName', 'userImage', '👍', 'reviewCreatedVersion', 'at',\n",
       "       'replyContent', 'repliedAt', 'appVersion', 'score', 'Comments',\n",
       "       'Keywords', 'LDA_Category', 'Sentiment', 'Insight'],\n",
       "      dtype='object')\n",
-      "Unique values in the 'score' column: [1 4 5 2 3]\n"
+      "Index(['Date', 'Post link', 'View', 'Post Hour', 'Bank', 'Time of day'], dtype='object')\n"
      ]
     }
    ],
    "source": [
-    "# Print columns of the apollo_reviews DataFrame\n",
-    "print(\"Columns of apollo_reviews DataFrame:\", apollo_reviews.columns)\n",
-    "\n",
-    "# Check the unique values in the 'score' column\n",
-    "print(\"Unique values in the 'score' column:\", apollo_reviews[\"score\"].unique())"
+    "print(apollo_reviews.columns)\n",
+    "print(banks_ad_data.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the plot as an HTML file\n",
+    "# Plot Apollo reviews rating distribution\n",
+    "fig1 = px.histogram(\n",
+    "    apollo_reviews, x=\"score\", title=\"Apollo Android Reviews Rating Distribution\"\n",
+    ")\n",
+    "\n",
+    "# Save the plot as an HTML file (nbformat isn't working)\n",
     "fig1.write_html(\"apollo_reviews_rating_distribution.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Banks ad performance over time\n",
+    "fig2 = px.line(\n",
+    "    banks_ad_data,\n",
+    "    x=\"Date\",\n",
+    "    y=\"View\",\n",
+    "    color=\"Bank\",\n",
+    "    title=\"Banks Ad Performance Over Time\",\n",
+    ")\n",
+    "\n",
+    "# Save the plot as an HTML file (nbformat isn't working)\n",
+    "fig2.write_html(\"banks_ad_performance_over_time.html\")"
    ]
   }
  ],
