--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,17 @@
       "25%    212300.000000\n",
       "50%    232100.000000\n",
       "75%    255900.000000\n",
-      "max    299100.000000\n"
+      "max    299100.000000\n",
+      "Banks Ad Data Summary:\n",
+      "        message_id\n",
+      "count         1.0\n",
+      "mean      87808.0\n",
+      "std           NaN\n",
+      "min       87808.0\n",
+      "25%       87808.0\n",
+      "50%       87808.0\n",
+      "75%       87808.0\n",
+      "max       87808.0\n"
      ]
     }
    ],
@@ -78,18 +88,25 @@
     "# Load Banks ad data\n",
     "banks_ad_data = pd.read_sql(\"SELECT * FROM banks_ad_data\", engine)\n",
     "\n",
+    "# Load Telegram ad data\n",
+    "telegram_ad_data = pd.read_sql(\"SELECT * FROM telegram_ad_data\",engine)\n",
+    "\n",
     "# Summarize Apollo reviews data\n",
     "apollo_summary = apollo_reviews.describe()\n",
     "print(\"Apollo Reviews Summary:\\n\", apollo_summary)\n",
     "\n",
     "# Summarize Banks ad data\n",
     "banks_ad_summary = banks_ad_data.describe()\n",
-    "print(\"Banks Ad Data Summary:\\n\", banks_ad_summary)"
+    "print(\"Banks Ad Data Summary:\\n\", banks_ad_summary)\n",
+    "\n",
+    "# Summarize Banks ad data\n",
+    "telegram_ad_summary = telegram_ad_data.describe()\n",
+    "print(\"Banks Ad Data Summary:\\n\", telegram_ad_summary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -100,18 +117,22 @@
       "       'replyContent', 'repliedAt', 'appVersion', 'score', 'Comments',\n",
       "       'Keywords', 'LDA_Category', 'Sentiment', 'Insight'],\n",
       "      dtype='object')\n",
-      "Index(['Date', 'Post link', 'View', 'Post Hour', 'Bank', 'Time of day'], dtype='object')\n"
+      "Index(['Date', 'Post link', 'View', 'Post Hour', 'Bank', 'Time of day'], dtype='object')\n",
+      "Index(['channel_username', 'message_id', 'message_link', 'views',\n",
+      "       'message_content', 'date', 'image_html'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
    "source": [
     "print(apollo_reviews.columns)\n",
-    "print(banks_ad_data.columns)"
+    "print(banks_ad_data.columns)\n",
+    "print(telegram_ad_data.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,6 +162,19 @@
     "\n",
     "# Save the plot as an HTML file (nbformat isn't working)\n",
     "fig2.write_html(\"banks_ad_performance_over_time.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot Apollo reviews rating distribution\n",
+    "fig3 = px.histogram(telegram_ad_data, x=\"views\", title=\"Telegram Ad Views\")\n",
+    "\n",
+    "# Save the plot as an HTML file (nbformat isn't working)\n",
+    "fig3.write_html(\"telegram_ad_data.html\")"
    ]
   }
  ],
